--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "js-cookie": "^3.0.5",
-    "next": "15.2.1",
+    "next": "^15.2.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.10.1",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
